# meeting-transcript

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
autostart/: .gitignore  MeetingBar.swift  README.md  config.json  install.sh  micwatch.swift
meeting_transcript/: main.py
skills/meeting-notes/: SKILL.md
skills/meeting-notes/scripts/: latest_meeting.py
