[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meeting-transcript"
version = "0.1.0"
description = "Local meeting transcription with MLX-Whisper and Claude protocol generation"
requires-python = ">=3.10"
dependencies = [
    "lightning-whisper-mlx>=0.0.10",
    "claude-agent-sdk>=0.1.0",
    "anyio>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
meeting = "meeting_transcript.main:main"
